--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1568,7 +1568,7 @@ background-color: #e8fbff!important;
 .page-template-default .page-parent > .ymc-smart-filter-container > .container-posts .container-post-custom-layout {
   display: none;
 }
-.page-parent .ymc-smart-filter-container > div.container-posts.container-post-custom-layout,
-.home{
+.home .ymc-smart-filter-container > div.container-posts.container-post-custom-layout,
+.page-parent .ymc-smart-filter-container > div.container-posts.container-post-custom-layout{
   display: none!important;
 }
