--- a/templates/single-lokale.html
+++ b/templates/single-lokale.html
@@ -41,7 +41,7 @@
 							<!-- wp:group -->
 							<div class="wp-block-group group mb-[20px] btn-back desktop:mb-[40px] w-fit flex items-center gap-[8px]">
 								<!-- wp:paragraph -->
-								<p class="text-[18px] text-[#bcbcbc] hover:text-white transition duration-[300ms] ease z-[1]"><a href="#" class="js-backToList">&larr; Wyszukiwanie</a></p>
+								<p class="text-[18px] text-[#bcbcbc] hover:text-white transition duration-[300ms] ease z-[1]"><a href="javascript:history.back()" class="_js-backToList">&larr; Wyszukiwanie</a></p>
 								<!-- /wp:paragraph -->
 							</div>
 							<!-- /wp:group -->
