--- a/templates/page-lokalizacja-default.html
+++ b/templates/page-lokalizacja-default.html
@@ -21,7 +21,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+		<div id="Page content" class="wp-block-group page-lokalizacja page-lokalizacja page-content-wrapper" >
       <!-- wp:pattern {"slug":"lokalizacja-default-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-default-content"} /-->
