--- a/templates/page-o-inwestycji-default.html
+++ b/templates/page-o-inwestycji-default.html
@@ -5,7 +5,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+		<div id="Page content" class="wp-block-group page-o_inwestycji page-content-wrapper" >
       <!-- wp:pattern {"slug":"o-inwestycji-default-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
 			<!-- wp:pattern {"slug":"_o-inwestycji-wiezycka-folwark-search"} /-->
