--- a/templates/page-o-inwestycji-default.html
+++ b/templates/page-o-inwestycji-default.html
@@ -6,10 +6,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-o_inwestycji page-content-wrapper" >
-      <!-- wp:pattern {"slug":"o-inwestycji-default-banner"} /-->
-			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
-			<!-- wp:pattern {"slug":"_o-inwestycji-wiezycka-folwark-search"} /-->
-      <!-- wp:pattern {"slug":"o-inwestycji-default-content"} /-->
+			<!-- wp:pattern {"slug":"page-galeria-default"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
