--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1565,6 +1565,7 @@ background-color: #e8fbff!important;
 }
 
 /* page o inwestycji posts hide */
+.inwestycje_hidden_filtr_posts,
 .home .ymc-smart-filter-container > div.container-posts.container-post-custom-layout,
 .page-o_inwestycji .ymc-smart-filter-container > div.container-posts.container-post-custom-layout,
 .page-lokalizacja .ymc-smart-filter-container > div.container-posts.container-post-custom-layout,
