--- a/templates/page-galeria-lokalizacja.html
+++ b/templates/page-galeria-lokalizacja.html
@@ -15,7 +15,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
       <!-- wp:pattern {"slug":"galeria-lokalizacja-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"galeria-lokalizacja-content"} /-->
