--- a/templates/page-galeria-torunska-16.html
+++ b/templates/page-galeria-torunska-16.html
@@ -6,7 +6,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
       <!-- wp:pattern {"slug":"page-galeria-torunska-16"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
