--- a/templates/page-lokalizacja-wiezycka-folwark.html
+++ b/templates/page-lokalizacja-wiezycka-folwark.html
@@ -6,7 +6,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
       <!-- wp:pattern {"slug":"lokalizacja-wiezycka-folwark-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-wiezycka-folwark-content"} /-->
