--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -729,7 +729,7 @@ label{
     transition: all 0.3s ease;
   }
 }
-.page-id-1926 .posts-found,
+/* .page-id-1926 .posts-found,
 .page-id-1926 .custom-posts-found,
 .page-id-1723 .posts-found,
 .page-id-1723 .custom-posts-found,
@@ -740,7 +740,7 @@ label{
 .page-id-1932 .posts-found,
 .page-id-1932 .custom-posts-found{
   display: none!important;
-}
+} */
 .ymc-smart-filter-container .filter-layout3 .posts-found:empty {
   display: block;
 }
