--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -131,7 +131,7 @@
 					<div class="wp-block-group container mx-auto relative desktop:px-0 px-[20px] pt-[140px] pb-[100px]">
 						<!-- wp:term-description {"align":"full"} /-->
 						<!-- wp:paragraph -->
-						<p class="desktop:mb-[60px] mb-0 text-[24px] font-medium">Przykładowa aranżacja <span class="text-[#828894] font-normal desktop:text-[24px] text-[18px]">(kliknij zdjęcie by powiększyć)</span></p>
+						<p class="desktop:mb-[60px] mb-0 text-[24px] font-medium">Przykładowa aranżacja2 <span class="text-[#828894] font-normal desktop:text-[24px] text-[18px]">(kliknij zdjęcie by powiększyć)</span></p>
 						<!-- /wp:paragraph -->
 
 						<!-- wp:group -->
