--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -130,6 +130,7 @@
 					<!-- wp:group -->
 					<div class="wp-block-group container mx-auto relative desktop:px-0 px-[20px] pt-[140px] pb-[100px]">
 						<!-- wp:term-description {"inwestycja"} /-->
+						<!-- wp:term-description {"term":"inwestycja"} /-->
 						<!-- wp:post-terms /-->
 						<!-- wp:paragraph -->
 						<p class="desktop:mb-[60px] mb-0 text-[24px] font-medium">Przykładowa aranżacja2 <span class="text-[#828894] font-normal desktop:text-[24px] text-[18px]">(kliknij zdjęcie by powiększyć)</span></p>
