--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -34,7 +34,7 @@
 						</figure>
 						<!-- /wp:image -->
 
-						<!-- wp:post-featured-image /-->
+						<!-- _wp:post-featured-image /-->
 						<!-- wp:term-description {"align":"full"} /-->
 
 						<!-- wp:group -->
