--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -35,7 +35,6 @@
 						<!-- /wp:image -->
 
 						<!-- _wp:post-featured-image /-->
-						<!-- wp:term-description {"align":"full"} /-->
 
 						<!-- wp:group -->
 						<div class="wp-block-group text-content container mx-auto desktop:px-[0px] px-[20px]">
@@ -131,6 +130,7 @@
 					<div class="wp-block-group container mx-auto relative desktop:px-0 px-[20px] pt-[140px] pb-[100px]">
 						<!-- wp:term-description {"inwestycja"} /-->
 						<!-- wp:term-description {"term":"inwestycja"} /-->
+						<!-- wp:post-terms {"term":"inwestycja"} /-->
 						<!-- wp:post-terms /-->
 						<!-- wp:paragraph -->
 						<p class="desktop:mb-[60px] mb-0 text-[24px] font-medium">Przykładowa aranżacja2 <span class="text-[#828894] font-normal desktop:text-[24px] text-[18px]">(kliknij zdjęcie by powiększyć)</span></p>
