--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -129,7 +129,7 @@
 					<!-- wp:group -->
 					<div class="wp-block-group container mx-auto relative desktop:px-0 px-[20px] pt-[140px] pb-[100px]">
 						<!-- wp:paragraph -->
-						<p class="desktop:mb-[60px] mb-0 text-[24px] font-medium">Przykładowa aranżacja2 <span class="text-[#828894] font-normal desktop:text-[24px] text-[18px]">(kliknij zdjęcie by powiększyć)</span></p>
+						<p class="desktop:mb-[60px] mb-0 text-[24px] font-medium">Przykładowa aranżacja <span class="text-[#828894] font-normal desktop:text-[24px] text-[18px]">(kliknij zdjęcie by powiększyć)</span></p>
 						<!-- /wp:paragraph -->
 
 						<!-- wp:group -->
@@ -137,8 +137,11 @@
 							<!-- wp:group -->
 							<div class="wp-block-group left-col desktop:w-[55%] wide:w-[45%]">
 								<!-- _wp:post-content /-->
-								<!-- wp:post-featured-image /-->
-
+								<!-- wp:group -->
+								<div class="wp-block-group w-fit overflow-hidden">
+									<!-- wp:post-featured-image /-->
+								</div>
+								<!-- /wp:group -->
 							</div>
 							<!-- /wp:group -->
 
