--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -133,10 +133,10 @@
 						<!-- /wp:paragraph -->
 
 						<!-- wp:group -->
-						<div class="wp-block-group two-col-layout desktop:mb-[30px] mb-[80px] desktop:flex justify-center">
+						<div class="wp-block-group h-[600px] two-col-layout desktop:mb-[30px] mb-[80px] desktop:flex justify-center">
 							<!-- wp:group -->
 							<div class="wp-block-group left-col desktop:w-[55%] wide:w-[45%]">
-								<!-- _wp:post-content /-->
+								<!-- wp:post-content /-->
 								<!-- wp:post-featured-image /-->
 							</div>
 							<!-- /wp:group -->
