--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -106,6 +106,7 @@ figure[class*="wp-block-image"] img,
 .single-lokale .wp-block-post-featured-image img {
   width: 50%!important;
   height: 50%!important;
+  margin-top: 200px;
   /* margin-left: auto;
   margin-right: auto; */
 }
