--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -107,6 +107,8 @@ figure[class*="wp-block-image"] img,
   width: 100%!important;
   height: 100%!important;
   margin-top: 250px;
+  object-fit: contain!important;
+  padding-right: 50px;
   /* margin-left: auto;
   margin-right: auto; */
 }
