--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -133,7 +133,7 @@
 						<!-- /wp:paragraph -->
 
 						<!-- wp:group -->
-						<div class="wp-block-group h-[600px] two-col-layout desktop:mb-[30px] mb-[80px] desktop:flex justify-center">
+						<div class="wp-block-group two-col-layout desktop:mb-[30px] mb-[80px] desktop:flex justify-center">
 							<!-- wp:group -->
 							<div class="wp-block-group left-col desktop:w-[55%] wide:w-[45%]">
 								<!-- wp:post-content /-->
