--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -34,8 +34,6 @@
 						</figure>
 						<!-- /wp:image -->
 
-						<!-- _wp:post-featured-image /-->
-
 						<!-- wp:group -->
 						<div class="wp-block-group text-content container mx-auto desktop:px-[0px] px-[20px]">
 							<!-- wp:group -->
@@ -135,7 +133,7 @@
 						<!-- wp:group -->
 						<div class="wp-block-group two-col-layout desktop:mb-[30px] mb-[80px] desktop:flex justify-center">
 							<!-- wp:group -->
-							<div class="wp-block-group left-col desktop:w-[55%] wide:w-[45%]">
+							<div class="wp-block-group left-col desktop:w-[55%]">
 								<!-- wp:post-content /-->
 								<!-- wp:post-featured-image /-->
 							</div>
