--- a/templates/single-lokale.html
+++ b/templates/single-lokale.html
@@ -163,10 +163,16 @@
 								</div>
 								<!-- /wp:group -->
 								<!-- wp:group -->
-								<div class="wp-block-group btn-download-mieszkanie group mb-[20px] btn-download relative bg-[#f5f7fa] text-textGray font-bold w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[3px] border-b-[#cecece] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#e9ecf2] before:transition-height before:duration-300 before:ease cursor-pointer">
-								<!-- wp:shortcode -->
-								[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
-								<!-- /wp:shortcode -->
+								<div class="wp-block-group btn-download-mieszkanie group mb-[20px] btn-download flex gap-[8px] items-center justify-center relative bg-[#f5f7fa] text-textGray font-bold w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[3px] border-b-[#cecece] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#e9ecf2] before:transition-height before:duration-300 before:ease cursor-pointer">
+									<!-- wp:paragraph -->
+									<p class="w-[20px] h-fit z-[1]">
+										<svg class="w-[20px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" class="injected-svg inject-svg"><path fill="transparent" d="M7 32V4h14.59L29 11.41V32H7z"></path><path fill="#2e384d" d="M21.17 5L28 11.83V31H8V5h13.17M22 3H6v30h24V11l-8-8z"></path><path fill="#2e384d" d="M29 13h-9V4h2v7h7v2z"></path></svg>
+									</p>
+									<!-- /wp:paragraph  -->
+
+									<!-- wp:shortcode  -->
+									[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
+									<!-- /wp:shortcode -->
 								</div>
 								<!-- /wp:group -->
 							</div>
