--- a/templates/single-lokale.html
+++ b/templates/single-lokale.html
@@ -14,7 +14,7 @@
 				<!-- wp:group {"templateLock":"contentOnly","anchor":true} -->
 				<div id="Wpis" class="wp-block-group mieszkania-page-post ooverflow-hidden relative">
 					<!-- wp:group -->
-					<div class="wp-block-group flex gap-[30px] items-center h-[47px] p-[5px_60px] rounded-full border-[2px] border-[rgba(255,255,255,0.33)]">
+					<div class="wp-block-group hidden flex gap-[30px] items-center h-[47px] p-[5px_60px] rounded-full border-[2px] border-[rgba(255,255,255,0.33)]">
 						<!-- wp:image -->
 						<figure class="wp-block-image m-0">
 							<img src="/wp-content/themes/pbgorski/assets/img/frontpage/phone-2.png" alt="phone-icon">
@@ -29,7 +29,7 @@
 					<!-- wp:group -->
 					<div class="wp-block-group banner w-full h-[460px] relative py-[60px] pt-[30px] desktop:pt-[60px] before:content-[''] before:inline-block before:w-full before:h-full before:bg-[#091224] before:absolute before:top-0 before:left-0 before:opacity-[25%]">
 						<!-- wp:image -->
-						<figure class="wp-block-image hidden w-full h-full absolute top-0 left-0 z-[-1]">
+						<figure class="wp-block-image w-full h-full absolute top-0 left-0 z-[-1]">
 							<img src="/wp-content/themes/pbgorski/assets/img/page-lista-mieszkan/lista-mieszkan-bg.jpeg" alt="banner-bg ">
 						</figure>
 						<!-- /wp:image -->
