--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -1,20 +1,5 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul>
-		<!-- wp:list-item -->
-		<li>
-			<script>
-				AOS.init({
-					duration: 600,
-					easing: 'ease',
-					once: true
-				});
-			</script>
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
 
 	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
 
@@ -25,7 +10,7 @@
       <!-- wp:pattern {"slug":"page-blog-title"} /-->
 			<!-- wp:group -->
 			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px]">
-				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post","taxQuery":{"category":[510]}},"isLink":true} -->
+				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post","taxQuery":{"exclude":[510]}},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true} -->
 					<div class="wp-block-group aos-fade-right blog-tile max-w-full h-fit mb-[80px]">
