--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -11,7 +11,7 @@
       <!-- wp:pattern {"slug":"page-blog-title"} /-->
 			<!-- wp:group -->
 			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px]">
-				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post","exclude":[510]},"isLink":true} -->
+				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post","exclude":["osiedle-srebrniki"]},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true} -->
 					<div class="wp-block-group aos-fade-right blog-tile max-w-full h-fit mb-[80px]">
