--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1537,14 +1537,14 @@ background-color: #e8fbff!important;
 
 /* All investments img */
 .term_investment_img > p,
-.term_investment_img > p > picture,
-.term_investment_img > p > picture img{
+.term_investment_img > p > picture{
   width: 100%;
   height: 100%;
 }
 .term_investment_img > p > img{
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 /* page o inwestycji posts hide */
