--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1541,10 +1541,10 @@ background-color: #e8fbff!important;
   width: 100%;
   height: 100%;
 }
-.term_investment_img > p > img{
+.term_investment_img > p > picture > img{
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover!important;
 }
 
 /* page o inwestycji posts hide */
