--- a/templates/archive.html
+++ b/templates/archive.html
@@ -6,7 +6,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper">
+		<div id="Page content" class="wp-block-group page-content-wrapper archive-code">
       <!-- wp:pattern {"slug":"page-blog-title"} /-->
 			<!-- wp:group -->
 			<div class="container mx-auto desktop:px-0 px-[20px]">
