--- a/templates/archive.html
+++ b/templates/archive.html
@@ -10,7 +10,7 @@
       <!-- wp:pattern {"slug":"page-blog-title"} /-->
 			<!-- wp:group -->
 			<div class="container mx-auto desktop:px-0 px-[20px]">
-				<!-- wp:query {"query":{"perPage":10,"pages":0,"offset":0,"postType":"post"},"isLink":true,"taxQuery":"osiedle-srebrniki",} -->
+				<!-- wp:query {"query":{"perPage":10,"pages":0,"offset":0,"postType":"post"},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true} -->
 					<div class="invest-tile max-w-full h-[370px] mb-[80px]">
