--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper">
+			<!-- wp:post-terms /-->
 			<!-- wp:post-content /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
