--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,14 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper">
-			<!-- wp:post-terms /-->
+			<!-- wp:group -->
+			<div class="test_inwestycja_tax_on_page">
+				<!-- wp:paragraph -->
+				<p>Inwestycja: </p>
+				<!-- /wp:paragraph -->
+				<!-- wp:post-terms /-->
+			</div>
+			<!-- /wp:group -->
 			<!-- wp:post-content /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
