--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 				<!-- wp:paragraph -->
 				<p>Inwestycja: </p>
 				<!-- /wp:paragraph -->
-				<!-- wp:post-terms /-->
+				<!-- wp:page-terms /-->
 			</div>
 			<!-- /wp:group -->
 			<!-- wp:post-content /-->
