--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,10 @@
 				<!-- wp:paragraph -->
 				<p>Inwestycja: </p>
 				<!-- /wp:paragraph -->
-				<!-- wp:page-terms /-->
+				<!-- wp:terms /-->
+				<!-- wp:term /-->
+				<!-- wp:terms {"inwestycja"} /-->
+				<!-- wp:term {"inwestycja"} /-->
 			</div>
 			<!-- /wp:group -->
 			<!-- wp:post-content /-->
