--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1542,7 +1542,7 @@ background-color: #e8fbff!important;
   width: 100%;
   height: 100%;
 }
-.term_investment_img > p > picture > img{
+.term_investment_img > p img{
   width: 100%;
   height: 300px;
   object-fit: cover!important;
