--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1555,10 +1555,11 @@ background-color: #e8fbff!important;
 .term_investment_img > p > picture{
   width: 100%;
   height: 100%;
+  display: block;
 }
 .term_investment_img > p img{
   width: 100%;
-  height: 300px;
+  height: 100%;
   object-fit: cover!important;
 }
 
