--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -65,6 +65,11 @@ h4 {
   text-decoration: none!important;
 }
 /* images */
+
+.banner figure[class*=wp-block-image] img {
+  object-fit: cover!important;
+}
+
 figure[class*="wp-block-image"] img,
 .wp-block-post-featured-image img {
   height: 100%!important;
