--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -70,6 +70,10 @@ h4 {
   object-fit: cover!important;
 }
 
+.inwestycje-posts .term_investment_img>p img{
+  height: 300px;
+}
+
 figure[class*="wp-block-image"] img,
 .wp-block-post-featured-image img {
   height: 100%!important;
