homepage images height fix

--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -70,7 +70,7 @@ h4 {
   object-fit: cover!important;
 }
 
-.inwestycje-posts .term_investment_img>p img{
+.home .inwestycje-posts .term_investment_img>p img{
   height: 300px;
 }
 
