--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -69,7 +69,7 @@ h4 {
   height: 300px;
 }
 
-figure[class*="wp-block-image"] img,
+.home figure[class*="wp-block-image"] img,
 .wp-block-post-featured-image img {
   height: 100%!important;
   width: 100%!important;
