--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -36,7 +36,7 @@ h2 {
 .page-template-page-blog h2{
   font-size: 40px;
   line-height: 54px;
- 
+
 }
 @media only screen and (max-width: 1024px) {
   .page-template-page-blog h2{
@@ -348,7 +348,7 @@ background-color: #b22944;
   width: 100%;
   min-height: 0%;
   background-color: #e1e1e1;
-  transition: min-height 0.3s ease; 
+  transition: min-height 0.3s ease;
 }
 .btn-more:hover:before{
   min-height: 100%;
@@ -472,7 +472,7 @@ label{
   max-width: 1170px!important;
   margin-left: auto!important;
   margin-right: auto!important;
-  
+
 } */
 .post-custom-layout-148-2.post-entry article,
 .post-custom-layout-148-3.post-entry article{
@@ -487,7 +487,7 @@ label{
     max-width: 1540px!important;
     margin-left: auto!important;
     margin-right: auto!important;
-  
+
   }
 }
 @media only screen and (min-width: 1024px) {
@@ -674,7 +674,7 @@ label{
   }
   #filter-layout3-filter-layout3 .filter-entry {
     height: 240px;
-  }  
+  }
 }
 
 #filter-layout3-filter-layout3 .js-heightAnimation .filter-entry .btn-search ~ div {
@@ -847,7 +847,7 @@ border-width: 0 2px 2px 0;
 }
 .ymc-smart-filter-container .filter-layout3 .dropdown-filter{
   border-radius: 0!important;
-  margin-bottom: 0!important;  
+  margin-bottom: 0!important;
 }
 .btn-more.dropdown-filter{
   margin-top: 2px;
@@ -1037,7 +1037,7 @@ background-color: #e8fbff!important;
 }
 .list-item-mieszkanie p:nth-child(5){
   width: 100px;
-  text-align: center; 
+  text-align: center;
 }
 .list-item-mieszkanie p:nth-child(6){
   width: 100px;
@@ -1134,7 +1134,7 @@ background-color: #e8fbff!important;
     position: relative!important;
     top: 230px;
     right: auto;
-  
+
     background-color: #f5f7fa;
     color: inherit;
     font-weight: bold;
@@ -1588,4 +1588,11 @@ background-color: #e8fbff!important;
   .wpmapblockrender.leaflet-container{
     height: 480px!important;
   }
+}
+
+
+#newsletter .wp-block-image.absolute{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
