--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1597,7 +1597,7 @@ background-color: #e8fbff!important;
 
 
 #newsletter .wp-block-image.absolute img{
-  object-fit: cover;
+  object-fit: cover!important;
   width: 100%;
   height: 100%;
 }
