--- a/templates/page-o-inwestycji-torunska-16.html
+++ b/templates/page-o-inwestycji-torunska-16.html
@@ -26,6 +26,7 @@
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"o-inwestycji-torunska-16-search"} /-->
       <!-- wp:pattern {"slug":"o-inwestycji-torunska-16-content"} /-->
+	  <!-- wp:shortcode -->[mapengine id="2740"]<!-- /wp:shortcode -->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
