--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1662,18 +1662,38 @@ background-color: #e8fbff!important;
 
 /* Contact Form - Newsletter */
 @layer components {
-  .newsletter .wpcf7-text{
+  .newsletter .wpcf7-email{
     @apply input-newsletter mb-[20px] h-[55px] bg-white text-[20px] leading-[150%];
   }
 
   /* <input id="your-email" name="your-email" type="text" placeholder="Adres e-mail" class="input-newsletter mb-[20px] h-[55px] bg-white text-[20px] leading-[150%]" style="width:390px"> */
-  .newsletter .wpcf7-checkbox{
+  .newsletter input[type="checkbox"]{
 
   }
 
-
   .newsletter .wpcf7-submit{
-    @apply btn-newsletter relative bg-primaryRed text-white w-[170px] h-[55px] flex items-center justify-center before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#95102b] before:transition-height before:duration-300 before:ease-in-out cursor-pointer;
+    @apply btn-newsletter;
+    @apply relative;
+    @apply bg-primaryRed;
+    @apply text-white;
+    @apply w-[170px];
+    @apply h-[55px];
+    @apply flex;
+    @apply items-center;
+    @apply justify-center;
+    @apply before:content-[''];
+    @apply before:inline-block;
+    @apply before:absolute;
+    @apply before:bottom-0;
+    @apply before:left-0;
+    @apply before:w-full;
+    @apply before:min-h-[0%];
+    @apply hover:before:min-h-[100%];
+    @apply before:bg-[#95102b];
+    @apply before:transition-height;
+    @apply before:duration-300;
+    @apply before:ease-in-out;
+    @apply cursor-pointer;
   }
   //border-bottom:3px solid #95102b
   /* <button type="submit" class="btn-newsletter group relative bg-primaryRed text-white w-[170px] h-[55px] flex items-center justify-center before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#95102b] before:transition-height before:duration-300 before:ease cursor-pointer" style="border-bottom:3px solid #95102b"><span class="z-[1] relative">Zapisz się</span></button> */
