--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1694,7 +1694,7 @@ background-color: #e8fbff!important;
     @apply before:duration-300;
     @apply before:ease-in-out;
     @apply cursor-pointer;
-    @apply p-0;
+    @apply p-[0px];
   }
   //border-bottom:3px solid #95102b
   /* <button type="submit" class="btn-newsletter group relative bg-primaryRed text-white w-[170px] h-[55px] flex items-center justify-center before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#95102b] before:transition-height before:duration-300 before:ease cursor-pointer" style="border-bottom:3px solid #95102b"><span class="z-[1] relative">Zapisz się</span></button> */
