--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1700,6 +1700,75 @@ background-color: #e8fbff!important;
   /* <button type="submit" class="btn-newsletter group relative bg-primaryRed text-white w-[170px] h-[55px] flex items-center justify-center before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#95102b] before:transition-height before:duration-300 before:ease cursor-pointer" style="border-bottom:3px solid #95102b"><span class="z-[1] relative">Zapisz się</span></button> */
 }
 
+
+/* Contact Form - Houses */
+@layer components {
+  .cta2 .wpcf7-text{
+    @apply px-[15px];
+    @apply py-[10px];
+    @apply w-[330px];
+    @apply desktop:w-full;
+    @apply h-[60px];
+    @apply text-[#2e384d];
+    @apply placeholder:text-[#757575];
+    @apply focus:border-white;
+    @apply active:border-black drop-shadow-lg;
+  }
+
+  .cta2 .wpcf7-email{
+    @apply px-[15px];
+    @apply py-[10px];
+    @apply w-[330px];
+    @apply desktop:w-full;
+    @apply h-[60px];
+    @apply text-[#2e384d];
+    @apply placeholder:text-[#757575];
+  }
+
+  .cta2 .wpcf7-checkbox{
+
+  }
+
+  .cta2 .wpcf7-textarea{
+    @apply px-[15px];
+    @apply py-[10px];
+    @apply mb-[10px];
+    @apply w-[330px];
+    @apply desktop:w-full;
+    @apply h-[240px];
+    @apply text-[#2e384d];
+    @apply placeholder:text-[#757575];
+  }
+
+  .cta2 .wpcf7-submit{
+    @apply relative;
+    @apply mt-[40px];
+    @apply bg-[#3d4b66];
+    @apply text-white;
+    @apply w-full;
+    @apply h-[55px];
+    @apply flex;
+    @apply items-center;
+    @apply justify-center;
+    @apply z-[1];
+    @apply before:content-[''];
+    @apply before:inline-block;
+    @apply before:absolute;
+    @apply before:bottom-0;
+    @apply before:left-0;
+    @apply before:w-full;
+    @apply before:min-h-[0%];
+    @apply hover:before:min-h-[100%];
+    @apply before:bg-[#2e384d];
+    @apply before:transition-height;
+    @apply before:duration-300;
+    @apply before:ease-in-out;
+    @apply before:z-[-1];
+    @apply cursor-pointer;
+  }
+}
+
+
 .wpcf7 form.sent .wpcf7-response-output{
   color: #000;
   background: #fff;
