--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -22,6 +22,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
+			<!-- wp:post-terms {"term":"inwestycja"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-content"} /-->
