--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -7,8 +7,8 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
-			<!-- wp:post-terms {"term":"inwestycja", className="hidden"} /-->
-			<!-- wp:post-terms {"term":"miasto"} /-->
+			<!-- wp:post-terms {"term":"inwestycja", "isLink":false, "className":"hidden"} /-->
+			<!-- wp:post-terms {"term":"miasto", "isLink":false} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-content"} /-->
