--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -9,8 +9,7 @@
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
-				<!-- wp:post-terms {"term":"inwestycja"} /-->
-				<!-- wp:post-terms {"term":"miasto"} /-->
+				<!-- wp:post-terms {"term":"miasto","isLink":"false"} /-->
 			</div>
 			<!-- /wp:group -->
 
