--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -10,6 +10,7 @@
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
 				<!-- wp:post-terms {"term":"miasto","isLink":"false"} /-->
+				<!-- wp:terms {"term":"miasto"} /-->
 			</div>
 			<!-- /wp:group -->
 
