--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -10,7 +10,7 @@
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
 				<!-- wp:post-terms {"term":"miasto","isLink":"false", "url":"/"} /-->
-				<!-- wp:terms {"term":"miasto"} /-->
+				<!-- wp:page-terms {"term":"miasto"} /-->
 			</div>
 			<!-- /wp:group -->
 
