--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -10,6 +10,8 @@
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
 				<!-- wp:post-terms {"term":"miasto","isLink":false} /-->
+				<!-- wp:core/categories {"showPostCounts":false,"displayAsDropdown":false,"showHierarchy":false} /-->
+
 			</div>
 			<!-- /wp:group -->
 
