--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -9,8 +9,8 @@
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
-				<!-- wp:post-terms {"term":"miasto","isLink":false} /-->
-				<!-- wp:core/categories {"showPostCounts":false,"displayAsDropdown":false,"showHierarchy":false} /-->
+				<!-- wp:post-terms {"postType":"page","term":"miasto"} /-->
+				<!-- wp:core/categories {"category":miasto} /-->
 
 			</div>
 			<!-- /wp:group -->
