--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -10,7 +10,7 @@
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
 				<!-- wp:post-terms {"postType":"page","term":"miasto"} /-->
-				<!-- wp:core/categories {"category":miasto} /-->
+				<!-- wp:core/categories {"category":"miasto"} /-->
 
 			</div>
 			<!-- /wp:group -->
