--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -9,9 +9,7 @@
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
 			<!-- wp:group -->
 			<div class="wp-block-group meta-data">
-				<!-- wp:post-terms {"postType":"page","term":"miasto"} /-->
-				<!-- wp:core/categories {"category":"miasto"} /-->
-
+				<!-- wp:post-terms {"postType":"post","term":"miasto"} /-->
 			</div>
 			<!-- /wp:group -->
 
