--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -7,11 +7,15 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
-			<!-- wp:group -->
-			<div class="wp-block-group meta-data">
-				<!-- wp:post-terms /-->
+			<!-- wp:query -->
+			<div class="wp-block-query">
+				<!-- wp:group -->
+				<div class="wp-block-group meta-data">
+					<!-- wp:post-terms /-->
+				</div>
+				<!-- /wp:group -->
 			</div>
-			<!-- /wp:group -->
+			<!-- /wp:query -->
 
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
