--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -12,7 +12,10 @@
 				</div>
 				<!-- /wp:group -->
 				
-			<!-- wp:post-terms /-->
+			<!-- wp:post-terms -->
+			<!-- wp:post-terms {"term":"miasto"}-->
+			<!-- /wp:post-terms -->
+			
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-content"} /-->
