--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -7,13 +7,11 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
-				<!-- wp:group -->
-				<div class="wp-block-group meta-data">
-				</div>
-				<!-- /wp:group -->
-				
-			<!-- wp:post-terms {"term":"miasto"} -->
-			<!-- /wp:post-terms -->
+			<!-- wp:group -->
+			<div class="wp-block-group meta-data">
+				<!-- wp:post-terms {"term":"miasto"} /-->
+			</div>
+			<!-- /wp:group -->
 			
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
 			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
