--- a/templates/page-lista-mieszkan-default.html
+++ b/templates/page-lista-mieszkan-default.html
@@ -1,20 +1,20 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
+  <!-- wp:template-part {"slug":"front-page/header-white"} /-->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
-
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
-      <!-- wp:pattern {"slug":"lista-mieszkan-default-banner"} /-->
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div id="Page content" class="wp-block-group page-content-wrapper">
+      <!-- wp:post-content /-->
       <!-- wp:pattern {"slug":"page-lista-mieszkan-default-filtr"} /-->
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+
+      <!-- wp:template-part {"slug":"front-page/cta"} /-->
+      <!-- wp:template-part {"slug":"front-page/newsletter"} /-->
+      <!-- wp:template-part {"slug":"front-page/footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
