--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -1,27 +1,34 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
+  <!-- wp:template-part {"slug":"front-page/header-white"} /-->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
-
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
-			<!-- wp:group -->
-			<div class="wp-block-group meta-data">
-				<!-- wp:post-terms {"term":"miasto_o_inwestycji"} /-->
-			</div>
-			<!-- /wp:group -->
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div
+      id="Page content"
+      class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts"
+    >
+      <!-- wp:group -->
+      <div class="wp-block-group meta-data">
+        <!-- wp:post-terms {"term":"miasto"} /-->
+      </div>
+      <!-- /wp:group -->
+      <!-- wp:group -->
+      <div class="wp-block-group meta-data">
+        <!-- wp:post-terms {"term":"inwestycja"} /-->
+      </div>
+      <!-- /wp:group -->
 
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
-			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
+      <!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-content"} /-->
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"front-page/cta"} /-->
+      <!-- wp:template-part {"slug":"front-page/newsletter"} /-->
+      <!-- wp:template-part {"slug":"front-page/footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
